--- a/test.html
+++ b/test.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>JSTest</title>
     <script src="example.js" defer></script>
+    <link rel="stylesheet" href="css.css">
 </head>
-<body>
+<body classO="container">
     <h1>Greeting</h1>
     <p id="target"></p>
 </body>
